Rework flags. Again.