@@ -1,26 +1,27 @@
 package com.cowlark.fluxengine.core.flags;
 
-import com.cowlark.fluxengine.core.FluxEngineException;
+import com.google.common.collect.ImmutableList;
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.function.Predicate;
+import java.util.Set;
+import lombok.AccessLevel;
+import lombok.Getter;
 
 public class FlagGroup
 {
-    private final List<FlagGroup> parents;
+    private final ImmutableList<FlagGroup> parents;
     private final List<Flag> flags = new ArrayList<>();
+    @Getter(AccessLevel.PACKAGE)
     private boolean initialised;
 
     public FlagGroup()
     {
-        parents = List.of();
+        parents = ImmutableList.of();
     }
 
     public FlagGroup(FlagGroup... parents)
     {
-        this.parents = List.of(parents);
+        this.parents = ImmutableList.copyOf(parents);
     }
 
     public void addFlag(Flag flag)
@@ -28,85 +29,25 @@ public class FlagGroup
         flags.add(flag);
     }
 
-    public void parse(String[] argv)
+    public Flag findFlag(String key)
     {
-        List<String> filenames = parseWithFilenames(argv, unused -> false);
-        if (!filenames.isEmpty())
-            throw new FluxEngineException(
-                    "non-option parameter '" + filenames.get(0) + "' seen (try --help)");
-    }
-
-    public List<String> parseWithFilenames(String[] argv, Predicate<String> callback)
-    {
-        if (initialised)
-            throw new IllegalStateException("called parse() twice");
-
-        /* Recursively accumulate a list of all flags. */
-        Map<String, Flag> flagsByName = new HashMap<>();
-        recurse(this, flagsByName);
-
-        List<String> filenames = new ArrayList<>();
-        int index = 0;
-        while (index < argv.length)
+        for (Flag flag : flags)
         {
-            String thisArg = argv[index];
-            String thatArg = (index < argv.length - 1) ? argv[index + 1] : "";
-
-            String key;
-            String value;
-            boolean useThat = false;
-
-            if (thisArg.isEmpty())
+            for (String name : flag.names())
             {
-                /* Ignore this argument. */
-            } else if (thisArg.charAt(0) != '-')
-            {
-                /* This is a filename. */
-                if (!callback.test(thisArg))
-                    filenames.add(thisArg);
-            } else
-            {
-                if (thisArg.length() > 1 && thisArg.charAt(1) == '-')
-                {
-                    /* Long option. */
-                    int equals = thisArg.lastIndexOf('=');
-                    if (equals >= 0)
-                    {
-                        key = thisArg.substring(0, equals);
-                        value = thisArg.substring(equals + 1);
-                    } else
-                    {
-                        key = thisArg;
-                        value = thatArg;
-                        useThat = true;
-                    }
-                } else
-                {
-                    /* Short option. */
-                    if (thisArg.length() > 2)
-                    {
-                        key = thisArg.substring(0, 2);
-                        value = thisArg.substring(2);
-                    } else
-                    {
-                        key = thisArg;
-                        value = thatArg;
-                        useThat = true;
-                    }
-                }
-
-                Flag flag = flagsByName.get(key);
-                if (flag == null)
-                    throw new FluxEngineException("unrecognised flag '" + key + "'; try --help");
-                flag.set(value);
-                if (useThat && flag.hasArgument())
-                    index++;
+                if (name.equals(key))
+                    return flag;
             }
-
-            index++;
         }
 
-        return filenames;
+        for (FlagGroup parent : parents)
+        {
+            Flag flag = parent.findFlag(key);
+            if (flag != null)
+                return flag;
+        }
+
+        return null;
     }
 
     public void checkInitialised()
@@ -115,21 +56,20 @@ public class FlagGroup
             throw new IllegalStateException("Attempt to access uninitialised flag");
     }
 
-    private void recurse(FlagGroup group, Map<String, Flag> flagsByName)
+    static void initialise(FlagGroup group, Set<String> names)
     {
         if (group.initialised)
             return;
 
         for (FlagGroup parent : group.parents)
-            recurse(parent, flagsByName);
+            initialise(parent, names);
 
         for (Flag flag : group.flags)
         {
             for (String name : flag.names())
             {
-                if (flagsByName.containsKey(name))
+                if (!names.add(name))
                     throw new IllegalStateException("two flags use the name '" + name + "'");
-                flagsByName.put(name, flag);
             }
         }
 
